--- a/public/template/product-details.html
+++ b/public/template/product-details.html
@@ -699,7 +699,9 @@
                 </div>
             </div>
         </div>
-    </div>        <main class="main">
+    </div>    
+        <!--  -->
+    <main class="main">
         <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
@@ -1364,6 +1366,7 @@
             </div>
         </section>
     </main>
+    <!--  -->
     <footer class="main">
         <section class="newsletter p-30 text-white wow fadeIn animated">
             <div class="container">
