--- a/public/template/blog-details.html
+++ b/public/template/blog-details.html
@@ -569,7 +569,9 @@
                 </div>
             </div>
         </div>
-    </div>        <main class="main">
+    </div>
+           <!--darisini  -->
+     <main class="main">
         <div class="page-header breadcrumb-wrap">
             <div class="container">
                 <div class="breadcrumb">
@@ -986,6 +988,7 @@
             </div>
         </section>
     </main>
+    <!--darisini  -->
     <footer class="main">
         <section class="newsletter p-30 text-white wow fadeIn animated">
             <div class="container">
